[feature] - Se añade feature para convertir texto a formato html - Se documentan las dependencias usadas - Se añade logo principal
[Pendiente]
- Añadir logo principal para los build de cada SO

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,4 +1,4 @@
-appId: com.electron.app
+appId: com.convert_text_to_html.app
 productName: convert_text_to_html
 directories:
   buildResources: build
