[logo] - Se modifican logos de la app
[Pendiente]
- Añadir logo principal para los build de cada SO

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,5 +1,5 @@
 appId: com.convert_text_to_html.app
-productName: convert_text_to_html
+productName: Convert Text To Html
 directories:
   buildResources: build
 files:
